--- a/SeminarLaTeX/literatura.bib
+++ b/SeminarLaTeX/literatura.bib
@@ -17,5 +17,11 @@
   timestamp = {2010-04-19T01:35:48.000+0200},
   title = {Artificial Intelligence: A Modern Approach (2nd Edition)},
   year = 2002
+},
+@online{amitp,
+  author = {Amit Patel},
+  title = {Introduction to A*},
+  url = {https://theory.stanford.edu/~amitp/GameProgramming/AStarComparison.html},
+  urldate = {2019-04-19}
 }
 
