Commit existing work for seminar

--- a/SeminarLaTeX/Seminar[2019]Lazaric_Marko.tex
+++ b/SeminarLaTeX/Seminar[2019]Lazaric_Marko.tex
@@ -34,17 +34,22 @@
 
 \chapter{Uvod}
 \input{chapters/01_uvod.tex}
+\section{Definicija problema}
+\input{chapters/01a_definicija.tex}
+\section{Kriteriji uspoređivanja algoritama}
+\input{chapters/01b_kriteriji.tex}
 
 \chapter{Naivni algoritmi}
 \input{chapters/02_naivni_algoritmi.tex}
 
-\section{Pretraga u širinu}
+\section{Pretraživanje u širinu}
 \input{chapters/02a_bfs.tex}
 
-\section{Dijkstrin algoritam}
+\section{Pretraživanje s jednolikom cijenom}
+\input{chapters/02b_ucs.tex}
 
 \chapter{Informirani algoritmi}
-\section{Pohlepna pretraga korištenjem prvog najboljeg čvora}
+\section{Pohlepno pretraživanje korištenjem prvog najboljeg čvora}
 \todo[inline]{engl. Greedy Best-First-Search}
 \section{Algoritam A*}
 
@@ -52,6 +57,7 @@
 
 \chapter{Zaključak}
 Zaključak.
+\todo[inline]{Mention navmesh}
 
 \bibliography{literatura}
 \bibliographystyle{fer}
