--- a/SeminarLaTeX/literatura.bib
+++ b/SeminarLaTeX/literatura.bib
@@ -23,5 +23,13 @@
   title = {Introduction to A*},
   url = {https://theory.stanford.edu/~amitp/GameProgramming/AStarComparison.html},
   urldate = {2019-04-19}
+},
+@STANDARD {umjetna,
+  title        = {3. Heurističko pretraživanje},
+  organization = {Umjetna inteligencija},
+  institution  = {Fakultet elektrotehnike i računarstva},
+  author       = {Bojana Dalbelo Bašić and Jan Šnajder},
+  year         = 2018,
+  url          = {https://www.fer.unizg.hr/_download/repository/UI-3-HeuristickoPretrazivanje.pdf}
 }
 
