Write pseudocode for BFS and UCS

--- a/SeminarLaTeX/Seminar[2019]Lazaric_Marko.tex
+++ b/SeminarLaTeX/Seminar[2019]Lazaric_Marko.tex
@@ -3,17 +3,12 @@
  \usepackage{url}
  \usepackage{tikz}
  \usepackage{todonotes}
- \usepackage{minted}
+ \usepackage[onelanguage,croatian,croatiankw]{algorithm2e}
  
  
  \usetikzlibrary{matrix}
  %\usetikzlibrary{external}
  %\tikzexternalize[prefix=build/]
- 
- \setminted{fontsize=\small,baselinestretch=1,linenos,frame=lines}
- 
- \renewcommand{\listingscaption}{Programski isječak}
- \renewcommand*{\thelisting}{\thechapter.\arabic{listing}}
  
  
 
