--- a/SeminarLaTeX/Seminar[2019]Lazaric_Marko.tex
+++ b/SeminarLaTeX/Seminar[2019]Lazaric_Marko.tex
@@ -39,27 +39,29 @@
 
 \section{Pretraživanje u širinu}
 \input{chapters/02a_bfs.tex}
-
+\clearpage
 \section{Pretraživanje s jednolikom cijenom}
 \input{chapters/02b_ucs.tex}
 
 \chapter{Informirani algoritmi}
 \input{chapters/03_informirani.tex}
+\section{Heuristička funkcija}
+\input{chapters/03a_heuristika.tex}
 \section{Pretraživanje "najbolji prvi"}
 \input{chapters/03a_greedy_bfs.tex}
 \section{Algoritam A*}
 \input{chapters/03b_astar.tex}
 
-\chapter{Primjena algoritma A* za pronalazak najkraćeg puta u cjelobrojnoj rešetci}
+%\chapter{Primjena u cjelobrojnoj rešetci}
+%\input{chapters/04_rectangular_grid.tex}
 
 \chapter{Zaključak}
-Zaključak.
-\todo[inline]{Mention navmesh}
+\input{chapters/04_zakljucak.tex}
 
 \bibliography{literatura}
 \bibliographystyle{fer}
 
 \chapter{Sažetak}
-Sažetak.
+\input{chapters/06_sazetak.tex}
 
 \end{document}
