--- a/SeminarLaTeX/figures/basic1.tex
+++ b/SeminarLaTeX/figures/basic1.tex
@@ -1,3 +1,7 @@
+\begin{scope}[xshift=-1.75cm, yshift=1.75cm, xscale=0.5, yscale=-0.5]
+	\find{0}{4}
+\end{scope}
+
 \begin{scope}[xshift=0.25cm, yshift=-0.25cm]
 	\draw[step=0.5cm,black,very thin] (-2,-2) grid (2,2);
 	
@@ -18,7 +22,7 @@
 	1 &   &   &   &   &   &   &   &   \\
 	2 &   &   &   &   &   &   &   &   \\
 	3 &   &   &   &   &   &   &   &   \\
-	4 & A &   &   &   &   &   &   &   \\
+	4 & 0 &   &   &   &   &   &   &   \\
 	5 &   &   &   &   &   &   &   &   \\
 	6 &   &   &   &   &   &   &   &   \\
 	7 &   &   &   &   &   &   &   &   \\};
