--- a/SeminarLaTeX/figures/basic2.tex
+++ b/SeminarLaTeX/figures/basic2.tex
@@ -1,3 +1,11 @@
+\begin{scope}[xshift=-1.75cm, yshift=1.75cm, xscale=0.5, yscale=-0.5]
+	\visit{0}{4}
+	
+	\find{0}{3}
+	\find{0}{5}
+	\find{1}{4}
+\end{scope}
+
 \begin{scope}[xshift=0.25cm, yshift=-0.25cm]
 	\draw[step=0.5cm,black,very thin] (-2,-2) grid (2,2);
 	
@@ -17,8 +25,8 @@
     0 &   &   &   &   &   &   &   & B \\
 	1 &   &   &   &   &   &   &   &   \\
 	2 &   &   &   &   &   &   &   &   \\
-	3 &   &   &   &   &   &   &   &   \\
-	4 & A &   &   &   &   &   &   &   \\
-	5 &   &   &   &   &   &   &   &   \\
+	3 & 1 &   &   &   &   &   &   &   \\
+	4 & 0 & 1 &   &   &   &   &   &   \\
+	5 & 1 &   &   &   &   &   &   &   \\
 	6 &   &   &   &   &   &   &   &   \\
 	7 &   &   &   &   &   &   &   &   \\};
